--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </div><!--why-me__slider-->
     <p>Ребята, я очень хочу у вас работать.</p>
     <p>Мне нравится история и дух вашей компании, и я без ума от продукта, который вы делаете.</p>
-    <p>Хочу творить вместе с вами историю!</p>
+    <p>Хочу творить историю вместе с вами!</p>
 
   </div><!--why-me-->
   
