--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         методологии тренировочного процесса, которая активно используется школой по сей день.</p>
       </div>
       <div class="my-experience__coaching_logo">
-        <img src="img/fcbescola.png" alt="FCBescola_Moscow" class="barca">
+        <img src="img/FCBescola.png" alt="FCBescola_Moscow" class="barca">
         <span class="barca">Сентябрь 2014 &#8212; <br> Август 2017</span>
       </div>
       </div><!--my-experience__coaching_barca-->
@@ -110,7 +110,7 @@
         полномочий и обязательств, и все ради того, чтобы зритель был счастлив и доволен. </p>
       </div>
       <div class="my-experience__olympic_logo">
-        <img src="img/olympics.png" alt="Olympic_Games_logo">
+        <img src="img/Olympics.png" alt="Olympic_Games_logo">
         <span class="olympic">Январь 2014 &#8212; <br> Март 2014</span>
       </div>
     </div>
