--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li class="main__nav_string"><a href="#briefly">Коротко</a></li>
         <li class="main__nav_string"><a href="#motive">Мотив</a></li>
         <li class="main__nav_string"><a href="#projects">Проекты</a></li>
-        <li class="main__nav_string"><a href="#why-me">Предложение</a></li>
+        <li class="main__nav_string"><a href="#why-me" onclick="ym(51906809, 'reachGoal', 'TARGET'); return true;">Предложение</a></li>
         <li class="main__nav_string"><a href="#contact_info">Контакты</a></li>
       </ul>
   </nav><!--main__nav-->
